--- a/src/style/pages/_home.scss
+++ b/src/style/pages/_home.scss
@@ -47,6 +47,7 @@
         font-size: 3.7rem;
         position: relative;
         font-family: $font-2;
+        color: $color-4;
 
         @media screen and (max-width: 650px){
           font-size: 2rem;
